tests/baselines/reference/asyncArrowFunction2_es2017(strict=true).errors.txt
asyncArrowFunction2_es2017.ts(1,10): error TS7006: Parameter 'await' implicitly has an 'any' type.


==== asyncArrowFunction2_es2017.ts (1 errors) ====
    var f = (await) => {
             ~~~~~
!!! error TS7006: Parameter 'await' implicitly has an 'any' type.
    }